@@ -94,6 +94,8 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * Added UserGetLanguageObject hook to change the language used in $wgLang
 * (bug 14645) When $wgMiserMode is on, expensive special pages are styled
   differently (italicized by default) on Special:SpecialPages
+* Added $wgAggregateStatsID, which allows UDP stats to be aggregated over
+  several wikis.
 
 === Bug fixes in 1.18 ===
 * (bug 23119) WikiError class and subclasses are now marked as deprecated
